--- a/flask-basics/pyproject.toml
+++ b/flask-basics/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "flask-practice"
+name = "flask-basics"
 version = "0.1.0"
-description = "MSAI Flask Practice"
+description = "MSAI Flask Basics - A simple Flask practice project"
 readme = "README.md"
 requires-python = ">=3.12.9"
 dependencies = [
