--- a/flask-basics/pyproject.toml
+++ b/flask-basics/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12.9"
 dependencies = [
     "flask>=3.1.0",
+    "flask-migrate>=4.1.0",
     "python-dotenv>=1.1.0",
 ]
