--- a/flask-basics/pyproject.toml
+++ b/flask-basics/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.12.9"
 dependencies = [
     "flask>=3.1.0",
     "flask-migrate>=4.1.0",
+    "logging>=0.4.9.6",
     "python-dotenv>=1.1.0",
 ]
