--- a/flask-basics/requirements.txt
+++ b/flask-basics/requirements.txt
@@ -4,10 +4,14 @@ alembic==1.15.2
 blinker==1.9.0
 click==8.1.8
 colorama==0.4.6 ; sys_platform == 'win32'
+dnspython==2.7.0
+email-validator==2.2.0
 flask==3.1.0
 flask-migrate==4.1.0
 flask-sqlalchemy==3.1.1
+flask-wtf==1.2.2
 greenlet==3.2.0 ; (python_full_version < '3.14' and platform_machine == 'AMD64') or (python_full_version < '3.14' and platform_machine == 'WIN32') or (python_full_version < '3.14' and platform_machine == 'aarch64') or (python_full_version < '3.14' and platform_machine == 'amd64') or (python_full_version < '3.14' and platform_machine == 'ppc64le') or (python_full_version < '3.14' and platform_machine == 'win32') or (python_full_version < '3.14' and platform_machine == 'x86_64')
+idna==3.10
 itsdangerous==2.2.0
 jinja2==3.1.6
 logging==0.4.9.6
@@ -17,3 +21,4 @@ python-dotenv==1.1.0
 sqlalchemy==2.0.40
 typing-extensions==4.13.2
 werkzeug==3.1.3
+wtforms==3.2.1
